# beets-cdman

./: .gitignore  CHANGELOG.md  DESIGN.md  Design.drawio  README.md  example-cdman-definition.yml  pyproject.toml
beetsplug/: cd.py  cd_parser.py  cd_type.py  cdman.py  dimensional_thread_pool_executor.py  m3uparser.py  stats.py  util.py
beetsplug/cd/: audio_cd.py  cd.py  cd_folder.py  mp3_cd.py  track.py
beetsplug/cd/audio/: audio_cd.py  audio_populate_mode.py  audio_track.py  audiocd.py  audiotrack.py
beetsplug/cd/mp3/: folder.py  mp3_cd.py  mp3_folder.py  mp3_track.py  mp3cd.py  mp3track.py
beetsplug/document/: document_builder.py  text_data.py
tests/: .gitignore  audio_cd_test.py  audio_track_test.py  common.py  common_track_test.py  mp3_cd_test.py  mp3_folder_test.py  mp3_track_test.py
tests/music/: Chasing Daylight.opus
