[project]
name = "beets-cdman"
version = "0.1.0"
description = ""
authors = [
    {name = "Tactical Laptop Bag",email = "tacticallaptopbag@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "beets (>=2.3.1,<3.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "confuse (>=2.0.1,<3.0.0)",
    "ffmpeg-python (>=0.2.0,<0.3.0)",
    "more-itertools (>=10.7.0,<11.0.0)",
]

[tool.poetry]
packages = [{include = "beetsplug"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
